--- a/ping.yml
+++ b/ping.yml
@@ -1,5 +1,9 @@
-- hosts:
-    - all
-  become_user: sysadm
-  tasks:
-    - action: ping
+# Test we can logon to 'webservers' and execute python with json lib.
+# ansible webservers -m ping
+
+- name: Example from an Ansible Playbook
+  ansible.builtin.ping:
+
+- name: Induce an exception to see what happens
+  ansible.builtin.ping:
+    data: crash
