--- a/ping.yml
+++ b/ping.yml
@@ -1,9 +1,6 @@
-# Test we can logon to 'webservers' and execute python with json lib.
-# ansible webservers -m ping
-
-- name: Example from an Ansible Playbook
-  ansible.builtin.ping:
-
-- name: Induce an exception to see what happens
-  ansible.builtin.ping:
-    data: crash
+- hosts:
+    - hosts
+  become_user: sysadm
+  become: true
+  tasks:
+    - action: ping
