--- a/brew.yml
+++ b/brew.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: all
   tasks:
-    - name: Install Virtualbox and Vagrant via brew cask
-      homebrew_cask: name={{ item }}
-      with_items:
-        - midnight-commander
+    - name: Install MidnightCommander
+      homebrew:
+        name: midnight-commander
+        state: present
